-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.0.0 Beta 1
-
bcbcf5e71884b006b0c89c4509af171de5aa59d7 9e44b76093e08fed7b57b52246f39a38f3265727 260bfaf056c08330ec2ed292e8d9def550e662ec
Pressing '5' in the example activates the shortcut, but pressing SHIFT+5 does not.
This works with Qt 4.8.
- depends on
-
QTBUG-27680 Qt5 should utilize libxkbcommon API for keyboard backend
-
- Closed
-
- relates to
-
QTBUG-27328 shortcut with two keys and the second needs an additional modifier
-
- Closed
-
| For Gerrit Dashboard: QTBUG-26902 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 36396,8 | Be able to obtain list of possible key combinations in platform integration | master | qt/qtbase | Status: MERGED | +2 | 0 |
| 36850,1 | Added possibleKeys(QKeyEvent *) to QWindowsIntegration | master | qt/qtbase | Status: MERGED | +2 | 0 |