src/gui/kernel/qplatformintegration.cpp
@@ -313,6 +313,20 @@ Qt::KeyboardModifiers QPlatformIntegration::queryKeyboardModifiers() const
 }
 
 /*!
+  Should be used to obtain a list of possible shortcuts for the given key
+  event. As that needs system functionality it cannot be done in qkeymapper.
+
+  One example for more than 1 possibility is the key combination of Shift+5.
+  That one might trigger a shortcut which is set as "Shift+5" as well as one
+  using %. These combinations depend on the currently set keyboard layout
+  which cannot be obtained by Qt functionality.
+*/
+QList<int> QPlatformIntegration::possibleKeys(const QKeyEvent *) const
+{
+    return QList<int>();
+}
+
+/*!
   Should be called by the implementation whenever a new screen is added.
 
   The first screen added will be the primary screen, used for default-created
